feat: make this effing db working